--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
-  "name": "lifegotbetterhomecare",
-  "version": "0.1.0",
+  "name": "lifegotbetterhomecare-monorepo",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.14.1",
-    "lucide-react": "^0.468.0",
-    "next": "15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "shadcn-ui": "^0.9.4",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "web:dev": "npm run dev --workspace=lifegotbetterhomecare",
+    "web:build": "npm run build --workspace=lifegotbetterhomecare",
+    "web:start": "npm run start --workspace=lifegotbetterhomecare",
+    "web:lint": "npm run lint --workspace=lifegotbetterhomecare",
+    "mobile:dev": "npm run start --workspace=lifegotbetterhomecare-mobile"
   }
 }
