Remove core package and update project dependencies
- Deleted @lifegotbetterhomecare/core package and its related files
- Removed core package references from web and mobile package.json
- Simplified root package.json workspace configuration
- Refactored Button component in web app to remove Radix UI Slot and simplify implementation

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "lifegotbetterhomecare-monorepo",
   "private": true,
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "apps/*"
   ],
   "scripts": {
     "web:dev": "npm run dev --workspace=lifegotbetterhomecare",
