--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,8 +21,7 @@
     "react-dom": "^19.0.0",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "@lifegotbetterhomecare/core": "*"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
