Add npm scripts for project cleanup and dependency management
- Introduced `clean` script to remove node_modules across the project
- Added `clean:install` script to reset dependencies and reinstall
- Simplified project maintenance and dependency management

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web:build": "npm run build --workspace=lifegotbetterhomecare",
     "web:start": "npm run start --workspace=lifegotbetterhomecare",
     "web:lint": "npm run lint --workspace=lifegotbetterhomecare",
-    "mobile:dev": "npm run start --workspace=lifegotbetterhomecare-mobile"
+    "mobile:dev": "npm run start --workspace=lifegotbetterhomecare-mobile",
+    "clean": "rm -rf node_modules && rm -rf apps/*/node_modules",
+    "clean:install": "npm run clean && npm install"
   }
 }
