feat(mobile): add EAS development client configuration and deployment guide
- Add development client configuration and scripts
- Create deployment guide for EAS builds
- Add scripts to manage dev client setup
- Update package.json scripts for both Expo Go and dev client
- Add basic app configuration backup

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,6 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:dev": "expo start --dev-client",
+    "setup:dev-client": "npm install expo-dev-client && npm install && npx expo install --fix",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
