--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "web:build": "cd apps/web && npm run build",
     "web:start": "cd apps/web && npm run start",
     "web:lint": "cd apps/web && npm run lint",
-    "mobile:dev": "cd apps/mobile && npm run start",
+    "mobile:dev": "cd apps/mobile && EXPO_NO_DEV_CLIENT=1 npm run start",
+    "mobile:dev-client": "cd apps/mobile && npm run start:dev",
+    "mobile:setup-dev-client": "cd apps/mobile && npm run setup:dev-client",
     "clean": "rm -rf node_modules && rm -rf apps/*/node_modules",
     "install:mobile": "cd apps/mobile && npm install",
     "install:web": "cd apps/web && npm install"
