--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "lifegotbetterhomecare-mobile",
+    "name": "Life Got Better Home Healthcare",
     "slug": "lifegotbetterhomecare-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -15,9 +15,14 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.lifegotbetterhomecare.mobile",
+      "buildNumber": "1",
+      "icon": "./assets/ios/AppIcon.appiconset"
     },
     "android": {
+      "package": "com.lifegotbetterhomecare.mobile",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
