--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/audio-toolkit": "^2.0.3",
     "expo": "~52.0.0",
