feat: Enhance app with native features for App Store approval
- Added AsyncStorage for theme preference persistence
- Integrated location services in contact form
- Added sharing functionality for app info
- Updated app icon configuration in app.json
- Created improved app icon design templates
- Streamlined navigation with focused tabs
- Removed unused screens and components
- Updated ContactSection with location integration
- Added AppStyles for consistent styling

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -18,7 +18,8 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.lifegotbetterhomecare.mobile",
       "buildNumber": "1",
-      "icon": "./assets/ios/AppIcon.appiconset"
+      "icon": "./assets/icon.png",
+      "iconFamily": "./assets/ios/AppIcon.appiconset/Contents.json"
     },
     "android": {
       "package": "com.lifegotbetterhomecare.mobile",
