--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,11 +13,20 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/audio-toolkit": "^2.0.3",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.0",
+    "expo-location": "^18.0.7",
+    "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-maps": "^1.20.1",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.8.0",
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
