--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.0",
     "expo-location": "^18.0.7",
+    "expo-notifications": "^0.29.13",
     "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "^14.0.2",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-maps": "^1.20.1",
