chore: Update branding and contact information across platforms
- Rename "Life Got Better Home Healthcare" to "Life Got Better Homecare"
- Update phone number from (414) 847-6498 to 1414-240-6913
- Modify email templates, mobile app, web components, and navigation
- Remove deprecated email-template.html file

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Life Got Better Home Healthcare",
+    "name": "Life Got Better Homecare",
     "slug": "lifegotbetterhomecare-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
