refactor: Update color scheme and styling for improved consistency across components
- Modify color variables in globals.css to use a deeper purple for primary and accent colors, enhancing visual coherence.
- Update footer component to utilize theme colors instead of hardcoded values for better maintainability.
- Adjust navigation bar links to reflect the new primary color for hover states, ensuring a unified design approach.
- Change theme color in manifest.json to align with the updated branding.

--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#9B59B6",
+  "theme_color": "#512888",
   "background_color": "#ffffff",
   "start_url": "/",
   "display": "standalone",
