--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "theme_color": "#4f2c5d",
+  "theme_color": "#9B59B6",
   "background_color": "#ffffff",
   "start_url": "/",
   "display": "standalone",
