--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -3,12 +3,12 @@
   "short_name": "LGBH",
   "icons": [
     {
-      "src": "/LGBH_logo.png",
+      "src": "/LGBH_logo_solo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/LGBH_logo.png",
+      "src": "/LGBH_logo_solo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
